// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command output for npm: logger.log 1`] = `
Array [
  "2 snapshots published.
- @multiple/package1@1.2.3-SNAPSHOT
- @multiple/package-two@1.2.3-SNAPSHOT",
]
`;

exports[`command output for npm: run 1`] = `
Array [
  "node /__mocked_node_modules__/@changesets/cli/bin.js version --snapshot feature_123-branch",
]
`;

exports[`command output for npm: runPublish 1`] = `
Array [
  "node /__mocked_node_modules__/@changesets/cli/bin.js publish --tag feature_123-branch",
]
`;

exports[`command output for npm: summary 1`] = `"🦋 New snapshots published!"`;

exports[`command output for npm: summary 2`] = `"<p>Version: <code>@multiple/package1@1.2.3-SNAPSHOT</code></p>"`;

exports[`command output for npm: summary 3`] = `"npm i @multiple/package1@feature_123-branch"`;

exports[`command output for pnpm: logger.log 1`] = `
Array [
  "2 snapshots published.
- @multiple/package1@1.2.3-SNAPSHOT
- @multiple/package-two@1.2.3-SNAPSHOT",
]
`;

exports[`command output for pnpm: run 1`] = `
Array [
  "node /__mocked_node_modules__/@changesets/cli/bin.js version --snapshot feature_123-branch",
]
`;

exports[`command output for pnpm: runPublish 1`] = `
Array [
  "node /__mocked_node_modules__/@changesets/cli/bin.js publish --tag feature_123-branch",
]
`;

exports[`command output for pnpm: summary 1`] = `"🦋 New snapshots published!"`;

exports[`command output for pnpm: summary 2`] = `"<p>Version: <code>@multiple/package1@1.2.3-SNAPSHOT</code></p>"`;

exports[`command output for pnpm: summary 3`] = `"pnpm add @multiple/package1@feature_123-branch"`;

exports[`command output for yarn: logger.log 1`] = `
Array [
  "2 snapshots published.
- @multiple/package1@1.2.3-SNAPSHOT
- @multiple/package-two@1.2.3-SNAPSHOT",
]
`;

exports[`command output for yarn: run 1`] = `
Array [
  "node /__mocked_node_modules__/@changesets/cli/bin.js version --snapshot feature_123-branch",
]
`;

exports[`command output for yarn: runPublish 1`] = `
Array [
  "node /__mocked_node_modules__/@changesets/cli/bin.js publish --tag feature_123-branch",
]
`;

exports[`command output for yarn: summary 1`] = `"🦋 New snapshots published!"`;

exports[`command output for yarn: summary 2`] = `"<p>Version: <code>@multiple/package1@1.2.3-SNAPSHOT</code></p>"`;

exports[`command output for yarn: summary 3`] = `"yarn add @multiple/package1@feature_123-branch"`;
